// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpdateContactComp render should render clearing the value 1`] = `
<div>
  Clear 
  <span
    className="emph"
  >
    Age
  </span>
  .
</div>
`;

exports[`UpdateContactComp render should render set channel 1`] = `
<div
  className="node_asset "
>
  Set 
  channel
   to 
  <span
    className="emph"
  >
    Twilio Channel
  </span>
  .
</div>
`;

exports[`UpdateContactComp render should render set field 1`] = `
<div
  className="node_asset "
>
  Set 
  <span
    className="emph"
  >
    Age
  </span>
   to 
  <span
    className="emph"
  >
    25
  </span>
  .
</div>
`;

exports[`UpdateContactComp render should render set language 1`] = `
<div
  className="node_asset "
>
  Set 
  language
   to 
  <span
    className="emph"
  >
    eng
  </span>
  .
</div>
`;

exports[`UpdateContactComp render should render set name 1`] = `
<div
  className="node_asset "
>
  Set 
  name
   to 
  <span
    className="emph"
  >
    Jane Goodall
  </span>
  .
</div>
`;
